--- a/Product.html
+++ b/Product.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/all.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/product.css">
 
 </head>
 
@@ -58,7 +58,7 @@
 
 
 
-  <script src="./js/main.js"></script>
+  <script src="./js/product.js"></script>
 
 </body>
 
