--- a/Product.html
+++ b/Product.html
@@ -1,65 +1,66 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/product.css" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/all.min.css">
-  <link rel="stylesheet" href="css/product.css">
+  <body>
+    <h1 id="wellcome" class="text-center">Welcome Admin</h1>
 
-</head>
+    <div class="w-75 mx-auto my-4">
+      <label for="productName">productName :</label>
+      <input type="text" class="form-control my-2" id="productName" />
 
-<body>
-  <h1 id="wellcome" class="text-center">wellcome @dm!n :)</h1>
+      <label for="productPrice">productPrice :</label>
+      <input type="number" class="form-control my-2" id="productPrice" />
 
-  <div class="w-75  mx-auto my-4">
+      <label for="productCategory">productCategory :</label>
+      <input type="text" class="form-control my-2" id="productCategory" />
 
-    <label for="productName">productName :</label>
-    <input type="text" class="form-control my-2" id="productName">
+      <label for="productIMG">productIMG :</label>
+      <input type="file" class="form-control my-2" id="productIMG" />
 
-    <label for="productPrice">productPrice :</label>
-    <input type="number" class="form-control my-2" id="productPrice">
+      <label for="productDesc">productDesc :</label>
+      <textarea
+        type="text"
+        class="form-control my-2"
+        id="productDesc"
+      ></textarea>
 
-    <label for="productCategory">productCategory :</label>
-    <input type="text" class="form-control my-2" id="productCategory">
+      
+      <button id="mainBtn" onclick="addProduct()" class="btn btn-primary">addProduct</button>
+    </div>
+    <div class="w-75 mx-auto py-4">
+      <div class="my-3 w-75 mx-auto">
+        <label for="">Search by Name :</label>
+        <input
+          onkeyup="searchProducts(this.value)"
+          type="text"
+          class="form-control my-2"
+          id="searchInput"
+        />
+      </div>
 
-    <label for="productIMG">productIMG :</label>
-    <input type="file" class="form-control my-2" id="productIMG">
-
-    <label for="productDesc">productDesc :</label>
-    <textarea type="text" class="form-control my-2" id="productDesc"></textarea>
-
-    <button id="mainBtn" onclick="addProduct()" class="btn btn-primary">add product</button>
-  </div>
-  <div class="w-75  mx-auto py-4">
-
-    <div class="my-3 w-75 mx-auto">
-      <label for="">Search by Name :</label>
-      <input onkeyup="searchProducts(this.value)" type="text" class="form-control my-2" id="searchInput">
+      <table class="table text-center">
+        <thead>
+          <th>Index</th>
+          <th>ProductName</th>
+          <th>ProductPrice</th>
+          <th>ProductCategory</th>
+          <th>productIMG</th>
+          <th>ProductDesc</th>
+          <th>update</th>
+          <th>delete</th>
+        </thead>
+        <tbody id="tableRow"></tbody>
+      </table>
     </div>
 
-    <table class=" table text-center">
-      <thead>
-        <th>Index</th>
-        <th>ProductName</th>
-        <th>ProductPrice</th>
-        <th>ProductCategory</th>
-        <th>productIMG</th>
-        <th>ProductDesc</th>
-        <th>update</th>
-        <th>delete</th>
-
-
-      </thead>
-      <tbody id="tableRow">
-
-      </tbody>
-    </table>
-
-  </div>
-
-
-
-  <script src="./js/product.js"></script>
-
-</body>
-
+    <script src="./js/product.js"></script>
+  </body>
 </html>
