Change the reload

--- a/Validation Login and Sign-In/Login/Login.html
+++ b/Validation Login and Sign-In/Login/Login.html
@@ -96,8 +96,8 @@
             last_login: dt,
           });
 
-          alert("User Logged In");
-          // ...
+          // alert("User Logged In");
+          window.location.href = "../../home.html";
         })
         .catch((error) => {
           const errorCode = error.code;
