--- a/home.html
+++ b/home.html
@@ -7,12 +7,12 @@
     <title> CONTENT | E-COMMERCE WEBSITE BY EDYODA </title>
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="icon" href="https://yt3.ggpht.com/a/AGF-l78km1YyNXmF0r3-0CycCA0HLA_i6zYn_8NZEg=s900-c-k-c0xffffffff-no-rj-mo" type="image/gif" sizes="16x16">
-    <link rel="stylesheet" href="homestyle.css">
+    <link rel="stylesheet" href="./css/homestyle.css">
     <!-- header link -->
         <!-- favicon -->
     <link rel="icon" href="https://yt3.ggpht.com/a/AGF-l78km1YyNXmF0r3-0CycCA0HLA_i6zYn_8NZEg=s900-c-k-c0xffffffff-no-rj-mo" type="image/gif" sizes="16x16">
         <!-- EXTERNAL LINKS -->
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="./css/header.css">
     <script src="https://kit.fontawesome.com/4a3b1f73a2.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" 
     integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" 
@@ -24,9 +24,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" 
     integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <!-- slider link -->
-    <link rel="stylesheet" href="slider.css" />
+    <link rel="stylesheet" href="./css/slider.css" />
 </head>
 <body>
         <!-- header start -->
@@ -154,5 +154,5 @@
         
         <!-- footter end -->
 </body>
-<script type="module" src="homejs.js"></script>
+<script type="module" src="js/homejs.js"></script>
 </html>
