--- a/Validation Login and Sign-In/Login/Login.html
+++ b/Validation Login and Sign-In/Login/Login.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Login Form</title>
-    <link rel="stylesheet" href="css/Style.css" />
+    <link rel="stylesheet" href="../Login/css/Style.css" />
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" 
