--- a/Product.html
+++ b/Product.html
@@ -1,66 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/all.min.css" />
-    <link rel="stylesheet" href="css/product.css" />
-    <title>Document</title>
-  </head>
 
-  <body>
-    <h1 id="wellcome" class="text-center">Welcome Admin</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/all.min.css" />
+  <link rel="stylesheet" href="css/product.css" />
+  <title>Document</title>
+</head>
 
-    <div class="w-75 mx-auto my-4">
-      <label for="productName">productName :</label>
-      <input type="text" class="form-control my-2" id="productName" />
+<body>
+  <h1 id="wellcome" class="text-center">Welcome Admin</h1>
 
-      <label for="productPrice">productPrice :</label>
-      <input type="number" class="form-control my-2" id="productPrice" />
+  <div class="w-75 mx-auto my-4">
+    <form id="productForm">
+      <label for="productName">Product Name:</label>
+      <input type="text" class="form-control my-2" id="productName" required minlength="5" maxlength="25" />
 
-      <label for="productCategory">productCategory :</label>
-      <input type="text" class="form-control my-2" id="productCategory" />
+      <label for="productPrice">Product Price:</label>
+      <input type="number" class="form-control my-2" id="productPrice" required min="0.01" />
 
-      <label for="productIMG">productIMG :</label>
-      <input type="file" class="form-control my-2" id="productIMG" />
+      <label for="productType">productType:</label>
+      <input type="text" class="form-control my-2" id="productType" required minlength="5" maxlength="25" />
 
-      <label for="productDesc">productDesc :</label>
-      <textarea
-        type="text"
-        class="form-control my-2"
-        id="productDesc"
-      ></textarea>
+      <label for="productCategory">Product brand:</label>
+      <input type="text" class="form-control my-2" id="productCategory" required minlength="5" maxlength="25" />
 
-      
-      <button id="mainBtn" onclick="addProduct()" class="btn btn-primary">addProduct</button>
-    </div>
-    <div class="w-75 mx-auto py-4">
-      <div class="my-3 w-75 mx-auto">
-        <label for="">Search by Name :</label>
-        <input
-          onkeyup="searchProducts(this.value)"
-          type="text"
-          class="form-control my-2"
-          id="searchInput"
-        />
-      </div>
+      <label for="productIMG">Product Image:</label>
+      <input type="file" class="form-control my-2" id="productIMG" required />
 
-      <table class="table text-center">
-        <thead>
-          <th>Index</th>
-          <th>ProductName</th>
-          <th>ProductPrice</th>
-          <th>ProductCategory</th>
-          <th>productIMG</th>
-          <th>ProductDesc</th>
-          <th>update</th>
-          <th>delete</th>
-        </thead>
-        <tbody id="tableRow"></tbody>
-      </table>
+      <label for="productDesc">Product Description:</label>
+      <textarea type="text" class="form-control my-2" id="productDesc"></textarea>
+
+      <button type="button" id="mainBtn" onclick="validateAndAddProduct()" class="btn btn-primary">Add Product</button>
+    </form>
+  </div>
+  <div class="w-75 mx-auto py-4">
+    <div class="my-3 w-75 mx-auto">
+      <label for="">Search by Name :</label>
+      <input onkeyup="searchProducts(this.value)" type="text" class="form-control my-2" id="searchInput" />
     </div>
 
-    <script src="./js/product.js"></script>
-  </body>
+    <table class="table text-center">
+      <thead>
+        <th>Index</th>
+        <th>ProductName</th>
+        <th>ProductPrice</th>
+        <th>ProductCategory</th>
+        <th>productIMG</th>
+        <th>ProductDesc</th>
+        <th>update</th>
+        <th>delete</th>
+      </thead>
+      <tbody id="tableRow"></tbody>
+    </table>
+  </div>
+
+  <script src="./js/product.js"></script>
+  <script>
+    function validateAndAddProduct() {
+      // Custom validation
+      const nameValidation = validateName();
+      const priceValidation = validatePrice();
+      const categoryValidation = validateCategory();
+      const imageValidation = validateImage();
+
+      // Display alerts for each error
+      if (nameValidation !== true) {
+        alert(nameValidation);
+      } else if (priceValidation !== true) {
+        alert(priceValidation);
+      } else if (categoryValidation !== true) {
+        alert(categoryValidation);
+      } else if (imageValidation !== true) {
+        alert(imageValidation);
+      } else {
+        // If all validations pass, proceed with adding the product
+        addProduct();
+      }
+    }
+
+    function validateName() {
+      // Custom validation for name (required, min length 5, max length 25)
+      const name = document.getElementById('productName').value;
+      if (name.length === 0) {
+        return 'Product Name is required.';
+      } else if (name.length < 5 || name.length > 25) {
+        return 'Product Name must be between 5 and 25 characters.';
+      }
+      return true;
+    }
+
+    function validatePrice() {
+      // Custom validation for price (required, positive number)
+      const price = document.getElementById('productPrice').value;
+      if (price.length === 0) {
+        return 'Product Price is required.';
+      } else if (isNaN(price) || parseFloat(price) <= 0) {
+        return 'Please enter a valid positive price.';
+      }
+      return true;
+    }
+
+    function validateCategory() {
+      // Custom validation for category (required, min length 5, max length 25)
+      const category = document.getElementById('productCategory').value;
+      if (category.length === 0) {
+        return 'Product Category is required.';
+      } else if (category.length < 5 || category.length > 25) {
+        return 'Product Category must be between 5 and 25 characters.';
+      }
+      return true;
+    }
+
+    function validateImage() {
+      // Custom validation for image (required)
+      const image = document.getElementById('productIMG');
+      if (image.files.length === 0) {
+        return 'Product Image is required.';
+      }
+      return true;
+    }
+  </script>
+</body>
+
 </html>
