--- a/home.html
+++ b/home.html
@@ -42,10 +42,7 @@
                         </div>
                 
                         <div id="user">
-                            <a href="#"> <i class="fa fa-cart-arrow-down" aria-hidden="true"></i><div id="badge"> </div></i></a>
-                            <!-- <a href="#"> <i class="fa fa-cart-arrow-down" aria-hidden="true"></i><div id="badge"> 0 </div></a> -->
-                            <a href="../Validation Login and Sign-In/Login/Login.html"> <i class="fa fa-user-circle-o" aria-hidden="true"></i> </a>
-                           
+                            <a href="./Cart.html"> <i class="fa fa-cart-arrow-down" aria-hidden="true"></i></i></a>
                                <a href="../Validation Login and Sign-In/Login/Login.html">
                                    <button id="logInButton">Log In</button>
                                </a>
@@ -56,7 +53,7 @@
                 <div >
                     <nav>
                         <a href="./Product.html" id="addProductButton">Add Product</a>
-                        <a href="#">Home</a>
+                        <a href="./home.html">Home</a>
                         <a href="#">About Us</a>
                         <a href="#">Products</a>
                         <a href="#">Help</a>
