--- a/Product.html
+++ b/Product.html
@@ -22,7 +22,12 @@
       <input type="number" class="form-control my-2" id="productPrice" required min="0.01" />
 
       <label for="productType">productType:</label>
-      <input type="text" class="form-control my-2" id="productType" required minlength="5" maxlength="25" />
+      <select id="productType" class="form-select my-2" name="" id="">
+        <option value="MEN">MEN</option>
+        <option value="Women">Women</option>
+        <option value="childrens">childrens</option>
+      </select>
+
 
       <label for="productCategory">Product brand:</label>
       <input type="text" class="form-control my-2" id="productCategory" required minlength="5" maxlength="25" />
