--- a/Product.html
+++ b/Product.html
@@ -52,7 +52,8 @@
         <th>Index</th>
         <th>ProductName</th>
         <th>ProductPrice</th>
-        <th>ProductCategory</th>
+        <th>ProductType</th>
+        <th>prand</th>
         <th>productIMG</th>
         <th>ProductDesc</th>
         <th>update</th>
