Update Some pages and Formatting

--- a/home.html
+++ b/home.html
@@ -54,8 +54,8 @@
                     <nav>
                         <a href="./Product.html" id="addProductButton">Add Product</a>
                         <a href="./home.html">Home</a>
+                        <a href="./Category.html" id="HomeCategory">AddCategory</a>
                         <a href="#">About Us</a>
-                        <a href="#">Products</a>
                         <a href="#">Help</a>
                     </nav>
                 </div>
@@ -97,7 +97,7 @@
         </div>
 
     </div>
-        <!-- product end -->
+        
 
         <!-- footter start -->
         <footer>
