--- a/Cart.html
+++ b/Cart.html
@@ -48,9 +48,10 @@
             </div>
             <div>
                 <nav>
+                    <a href="./Product.html" id="addProductButton">Add Product</a>
                     <a href="./home.html">Home</a>
+                    <a href="./Category.html" id="HomeCategory">AddCategory</a>
                     <a href="#">About Us</a>
-                    <a href="#">Products</a>
                     <a href="#">Help</a>
                 </nav>
             </div>
