--- a/Category.html
+++ b/Category.html
@@ -6,16 +6,16 @@
   </head>
 
   <body>
-    <h1 id="wellcome" class="text-center">wellcome @dm!n :)</h1>
+    <h1 id="wellcome" class="text-center">Welcome Admin</h1>
 
     <div class="w-75 mx-auto my-4">
-      <label for="CategoryName">CategoryName :</label>
+      <label for="CategoryName">Category Name :</label>
       <input type="text" class="form-control my-2" id="CategoryName" />
 
-      <label for="CategoryIMG">CategoryIMG :</label>
+      <label for="CategoryIMG">Category IMG :</label>
       <input type="file" class="form-control my-2" id="CategoryIMG" />
 
-      <label for="CategoryDesc">CategoryDesc :</label>
+      <label for="CategoryDesc">Category Desc :</label>
       <textarea
         type="text"
         class="form-control my-2"
