--- a/productdetails.html
+++ b/productdetails.html
@@ -48,11 +48,11 @@
                     </div>
                     <div >
                         <nav>
-                            <a href="./Product.html" id="addProductButton">Add Product</a>
-                            <a href="./home.html">Home</a>
-                            <a href="#">About Us</a>
-                            <a href="#">Products</a>
-                            <a href="#">Help</a>
+                        <a href="./Product.html" id="addProductButton">Add Product</a>
+                        <a href="./home.html">Home</a>
+                        <a href="./Category.html" id="HomeCategory">AddCategory</a>
+                        <a href="#">About Us</a>
+                        <a href="#">Help</a>
                         </nav>
                     </div>
                 
