update home product

--- a/Product.html
+++ b/Product.html
@@ -23,9 +23,9 @@
 
       <label for="productType">productType:</label>
       <select id="productType" class="form-select my-2" name="" id="">
-        <option value="MEN">MEN</option>
-        <option value="Women">Women</option>
-        <option value="childrens">childrens</option>
+        <option value="men">Men</option>
+        <option value="women">Women</option>
+        <option value="Mix">Mix</option>
       </select>
 
 
