--- a/home.html
+++ b/home.html
@@ -92,8 +92,8 @@
         <div id="women">
         </div>
 
-        <h1> various product  </h1>
-        <div id="various">
+        <h1> Mix Of Products </h1>
+        <div id="Mix">
         </div>
 
     </div>
