Update Style and Photo and Formating

--- a/Cart.html
+++ b/Cart.html
@@ -49,10 +49,10 @@
             <div>
                 <nav>
                     <a href="./Product.html" id="addProductButton">Add Product</a>
-                    <a href="./home.html">Home</a>
-                    <a href="./Category.html" id="HomeCategory">AddCategory</a>
-                    <a href="#">About Us</a>
-                    <a href="#">Help</a>
+                        <a href="./home.html">Home</a>
+                        <a href="./Category.html" id="HomeCategory">AddCategory</a>
+                        <a href="SeeAllOrders.html" id="AllOrderPage">All Oorders</a>
+                        <a href="#">About Us</a>
                 </nav>
             </div>
             
