--- a/home.html
+++ b/home.html
@@ -55,8 +55,8 @@
                         <a href="./Product.html" id="addProductButton">Add Product</a>
                         <a href="./home.html">Home</a>
                         <a href="./Category.html" id="HomeCategory">AddCategory</a>
+                        <a href="SeeAllOrders.html" id="AllOrderPage">All Oorders</a>
                         <a href="#">About Us</a>
-                        <a href="#">Help</a>
                     </nav>
                 </div>
             
