Update Photo an Category

--- a/Product.html
+++ b/Product.html
@@ -53,7 +53,7 @@
         <th>ProductName</th>
         <th>ProductPrice</th>
         <th>ProductType</th>
-        <th>prand</th>
+        <th>Brand</th>
         <th>productIMG</th>
         <th>ProductDesc</th>
         <th>update</th>
