--- a/Category.html
+++ b/Category.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/all.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <!-- <link rel="stylesheet" href="css/style.css" /> -->
   </head>
 
   <body>
@@ -11,10 +11,6 @@
     <div class="w-75 mx-auto my-4">
       <label for="CategoryName">Category Name :</label>
       <input type="text" class="form-control my-2" id="CategoryName" />
-
-      <label for="CategoryIMG">Category IMG :</label>
-      <input type="file" class="form-control my-2" id="CategoryIMG" />
-
       <label for="CategoryDesc">Category Desc :</label>
       <textarea
         type="text"
@@ -22,9 +18,7 @@
         id="CategoryDesc"
       ></textarea>
 
-      <button id="mainBtn" onclick="addProduct()" class="btn btn-primary">
-        add Category
-      </button>
+      <button id="mainBtn" onclick="addProduct()" class="btn btn-primary">add Category</button>
     </div>
     <div class="w-75 mx-auto py-4">
       <div class="my-3 w-75 mx-auto">
@@ -41,7 +35,6 @@
         <thead>
           <th>Index</th>
           <th>CategoryName</th>
-          <th>CategoryIMG</th>
           <th>CategoryDesc</th>
           <th>update</th>
           <th>delete</th>
