--- a/Cart.html
+++ b/Cart.html
@@ -63,7 +63,7 @@
         <ul id="cart-items"></ul>
         <div id="cart-total"></div>
         <div id="cart-confirm">
-            <button disabled id="checkoutBtn">checkout</button>
+            <button  id="checkoutBtn">checkout</button>
         </div>
     </section>
     <!-- end of cart with items -->
