Update some feature in Project
show message if not login and Delete mail from local if he logOut

--- a/home.html
+++ b/home.html
@@ -151,7 +151,7 @@
         <script type="module" src="js/homejs.js"></script>
        <script>
         // Place your script logic here, including the localStorage setup and performSearch function
-        localStorage.setItem('myProducts', JSON.stringify(products));
+        // localStorage.setItem('myProducts', JSON.stringify(products));
 
         function performSearch() {
             // Get the input value
