--- a/wishList.html
+++ b/wishList.html
@@ -7,6 +7,7 @@
    
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/cart.css">
+    <link rel="stylesheet" href="css/homestyle.css">
     <link href='https://fonts.googleapis.com/css?family=Cairo' rel='stylesheet'>
     <!-- شغل نادر حسبي الله  -->
     <title> HEADER | E-COMMERCE WEBSITE </title>
@@ -28,30 +29,33 @@
     <header>
         <section>
             <div id="container">
-                
-                <div id="shopName"><a href="index.html"> <b>NADER</b>shop </a></div>
-                
+
+                <div id="shopName"><a href="home.html"> <b>NADER</b>shop </a></div>
+
                 <div class="search">
-                    <input type='text' placeholder="ًًWhat Are You Looking For?" />
-                    <i class="fa fa-search" aria-hidden="true"></i>
+                    <input type='text' id="searchInput" placeholder="Search Products" oninput="performSearch()" />
+                    <div id="searchResults" class="search-results"></div>
                 </div>
 
                 <div id="user">
-                    <a href="#"> <i class="fa fa-cart-arrow-down" aria-hidden="true">
-                        </i>
-                        <div id="badge"></div>
-                        </i>
+                    <a href="./Wishlist.html" target="_blank"> <i class="fa fa-heart" aria-hidden="true"></i></a>
+                    <a href="./Cart.html" target="_blank"> <i class="fa fa-cart-arrow-down"
+                            aria-hidden="true"></i></i></a>
+
+                    <a href="../Validation Login and Sign-In/Login/Login.html" target="_blank">
+                        <button id="logInButton">Log In</button>
                     </a>
-                    <a href="#"> <i class="fa fa-user-circle-o" aria-hidden="true"></i> </a>
+                    <button id="logOutButton">Logout</button>
 
                 </div>
             </div>
             <div>
                 <nav>
-                    <a href="#">Home</a>
+                    <a href="./Product.html" target="_blank" id="addProductButton">Add Product</a>
+                    <a href="./home.html" target="_blank">Home</a>
+                    <a href="./Category.html" target="_blank" id="HomeCategory">AddCategory</a>
+                    <a href="SeeAllOrders.html" target="_blank" id="AllOrderPage">All Oorders</a>
                     <a href="#">About Us</a>
-                    <a href="#">Products</a>
-                    <a href="#">Help</a>
                 </nav>
             </div>
 
@@ -73,7 +77,7 @@
     <!-- next section is appare when cart is empty -->
     <section id="contentCart">
         <div class="emptyCartImg">
-            <img src="./img/wishe.jpeg" alt="empty cart">
+            <h1></h1>
             <h2>Your wishList is <span>Empty</span> </h2>
             <p>Must add items on the wishList </p>
             <br>
@@ -126,6 +130,7 @@
         </div>
     </footer>
     <script src="js/wishList.js"></script>
+    <script type="module" src="js/homejs.js"></script>
 </body>
 
 </html>
