--- a/Product.html
+++ b/Product.html
@@ -23,7 +23,7 @@
     integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/footer.css">
-  <link rel="stylesheet" href="css/product.css">
+  <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="./css/homestyle.css">
 </head>
 
