--- a/Cart.html
+++ b/Cart.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/cart.css">
     <link rel="stylesheet" href="./css/homestyle.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link href='https://fonts.googleapis.com/css?family=Cairo' rel='stylesheet'>
     <title> E-COMMERCE WEBSITE </title>
     <!-- favicon -->
@@ -166,6 +167,7 @@
         </form>
     </section>
     <!-- end of checkout section -->
+    <!-- footter start -->
     <footer>
         <div class="content">
             <div class="left box">
@@ -198,7 +200,7 @@
             <p>Copyright © 2023 <a href="#">Top Store</a> All rights reserved</p>
         </div>
     </footer>
-
+    <!-- footter end -->
     <script src="js/cart.js"></script>
     <script type="module" src="js/homejs.js"> </script>
     <script src="js/bootstrap.bundle.min.js"></script>
