--- a/home.html
+++ b/home.html
@@ -23,13 +23,7 @@
         integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- footter link -->
-    <!-- EXTERNAL LINKS -->
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
-        integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="css/footer.css">
     <!-- slider link -->
     <link rel="stylesheet" href="./css/slider.css" />
 </head>
@@ -110,54 +104,38 @@
 
     <!-- footter start -->
     <footer>
-        <section>
-            <div id="containerFooter">
-
-                <div id="webFooter">
-                    <h3> online store </h3>
-                    <p> men clothing </p>
-                    <p> women clothing </p>
-                    <p> men accessories </p>
-                    <p> women accessories </p>
-                </div>
-                <div id="webFooter">
-                    <h3> partners </h3>
-                    <p> zara </p>
-                    <p> pantaloons </p>
-                    <p> levis </p>
-                    <p> ucb </p>
-                    <p> + many more </p>
-                </div>
-                <div id="webFooter">
-                    <h3> follow us </h3>
-                    <p>
-                        <span class="icon"><i class="fa fa-facebook-square" aria-hidden="true"></i></span>
-                        <span class="text">facebook</span>
+        <div class="content">
+            <div class="left box">
+                <div class="upper">
+                    <div class="topic">About us</div>
+                    <p>Easy platform to use when you're online shopping for any type of products you’re looking for.
+                        Even if
+                        you’re just browsing, we assure you that you will find something you like in our catalog. Our
+                        clothing store
+                        provides you with over one million products and variations to choose from! You can fitch
                     </p>
-                    <p>
-                        <span class="icon"><i class="fa fa-instagram" aria-hidden="true"></i></span>
-                        <span class="text">instagram</span>
-                    </p>
-                    <p>
-                        <span class="icon"><i class="fa fa-twitter-square" aria-hidden="true"></i></span>
-                        <span class="text">twitter</span>
-                    </p>
-                </div>
-                <div id="webFooter">
-                    <form action="#">
-                        <input type="text" placeholder="Enter Your problem">
-                        <input type="submit" name="" value="Send">
-                    </form>
-                </div>
-                <div class="bottom">
-                    <p>Copyright © 2023 <a href="#">elmayteen</a> All rights reserved</p>
                 </div>
             </div>
+            <div class="right box">
+                <div class="topic">Subscribe us</div>
+                <form action="#">
+                    <input type="text" placeholder="Enter email address">
+                    <input type="submit" name="" value="Send">
+                    <div class="media-icons">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </form>
             </div>
-        </section>
-
+        </div>
+        <div class="bottom">
+            <p>Copyright © 2023 <a href="#">Top Store</a> All rights reserved</p>
+        </div>
     </footer>
-
+    <!-- footter end -->
     <script type="module" src="js/homejs.js"></script>
     <script>
         // Place your script logic here, including the localStorage setup and performSearch function
