--- a/wishList.html
+++ b/wishList.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/cart.css">
     <link rel="stylesheet" href="css/homestyle.css">
     <link href='https://fonts.googleapis.com/css?family=Cairo' rel='stylesheet'>
-    <!-- شغل نادر حسبي الله  -->
     <title> HEADER | E-COMMERCE WEBSITE </title>
     <!-- favicon -->
     <link rel="icon"
@@ -21,7 +20,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
         integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+    <!-- footter link -->
+  <link rel="stylesheet" href="css/footer.css">
+
 </head>
 
 <body>
@@ -86,7 +87,7 @@
     </section>
     <!-- end of empty wishList section -->
 
-    <!-- end of checkout section -->
+    <!-- footter start -->
     <footer>
         <div class="content">
             <div class="left box">
@@ -96,18 +97,8 @@
                         Even if
                         you’re just browsing, we assure you that you will find something you like in our catalog. Our
                         clothing store
-                        provides you with over one million products and variations to choose from! You can shop for
-                        anything you
-                        need </p>
-                </div>
-                <div class="lower">
-                    <div class="topic">Contact us</div>
-                    <div id="conact" class="phone">
-                        <a href="#"><i class="fas fa-phone-volume"></i>+12345678910</a>
-                    </div>
-                    <div class="email">
-                        <a href="#"><i class="fas fa-envelope"></i>test@gmail.com</a>
-                    </div>
+                        provides you with over one million products and variations to choose from! You can fitch
+                    </p>
                 </div>
             </div>
             <div class="right box">
@@ -126,9 +117,10 @@
             </div>
         </div>
         <div class="bottom">
-            <p>Copyright © 2023 <a href="#">elmayteen</a> All rights reserved</p>
+            <p>Copyright © 2023 <a href="#">Top Store</a> All rights reserved</p>
         </div>
     </footer>
+    <!-- footter end -->
     <script src="js/wishList.js"></script>
     <script type="module" src="js/homejs.js"></script>
 </body>
