--- a/Cart.html
+++ b/Cart.html
@@ -67,7 +67,9 @@
         <div id="cart-total"></div>
         <div class="row">
             <div class="col text-start" id="cart-previous">
-                <button class="btn btn-danger ms-5 mt-2 ">See Previous Order</button>
+                <button class="btn btn-danger ms-5 mt-2 "> <a style=" text-decoration: none; color: aliceblue;"
+                        href="prev.html"> See
+                        Previous Order </a></button>
             </div>
             <div class="col text-end" id="cart-confirm">
                 <button class="btn btn-danger me-4 mt-2" id="checkoutBtn">checkout</button>
