--- a/prev.html
+++ b/prev.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cart</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/cart.css">
+    <link rel="stylesheet" href="./css/homestyle.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link href='https://fonts.googleapis.com/css?family=Cairo' rel='stylesheet'>
     <!-- شغل نادر حسبي الله  -->
     <title> HEADER | E-COMMERCE WEBSITE </title>
