--- a/Validation Login and Sign-In/Login/Login.html
+++ b/Validation Login and Sign-In/Login/Login.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="wrapper" style="margin-bottom: 50px; margin-top: 50px;">
-      <div class="title">Login Form</div>
+      <div class="title"><b style="font-size: 30px;">Nader</b>shop</div>
       <form id="Login-Form">
         <!-- ====== Email ======= -->
         <div class="field">
@@ -46,55 +46,6 @@
         </div>
       </form>
     </div>
-    <!-- footter start -->
-    <footer>
-      <section>    
-          <div id="containerFooter">
-              
-              <div id="webFooter">
-                  <h3> online store </h3>
-                  <p> men clothing </p>
-                  <p> women clothing </p>
-                  <p> men accessories </p>
-                  <p> women accessories </p>
-              </div>
-              <div id="webFooter">
-                  <h3> partners </h3>
-                  <p> zara </p>
-                  <p> pantaloons </p>
-                  <p> levis </p>
-                  <p> ucb </p>
-                  <p> + many more </p>
-              </div>
-              <div id="webFooter">
-                  <h3> follow us </h3>
-                  <p>
-                      <span class="icon"><i class="fa fa-facebook-square" aria-hidden="true"></i></span>
-                      <span class="text">facebook</span>
-                  </p>
-                  <p> 
-                      <span class="icon"><i class="fa fa-instagram" aria-hidden="true"></i></span>
-                      <span class="text">instagram</span>
-                  </p>
-                  <p>
-                      <span class="icon"><i class="fa fa-twitter-square" aria-hidden="true"></i></span>
-                      <span class="text">twitter</span>
-                  </p>
-              </div>
-              <div id="webFooter">
-                  <form action="#">
-                  <input type="text" placeholder="Enter Your problem">
-                  <input type="submit" name="" value="Send">
-                  </form>
-              </div>
-              <div class="bottom">
-                  <p>Copyright © 2023 <a href="#">elmayteen</a> All rights reserved</p>
-              </div>
-              </div>
-          </div>
-      </section>
-
-  </footer>
   </body>
 
   <script type="module">
