--- a/Category.html
+++ b/Category.html
@@ -11,6 +11,7 @@
     href="https://yt3.ggpht.com/a/AGF-l78km1YyNXmF0r3-0CycCA0HLA_i6zYn_8NZEg=s900-c-k-c0xffffffff-no-rj-mo"
     type="image/gif" sizes="16x16">
   <!-- EXTERNAL LINKS -->
+  <title>Nader Shop | Add Category</title>
   <link rel="stylesheet" href="./css/header.css">
   <link rel="stylesheet" href="./css/homestyle.css">
   <script src="https://kit.fontawesome.com/4a3b1f73a2.js"></script>
@@ -47,10 +48,10 @@
       </div>
       <div>
         <nav>
-          <a href="./Product.html" target="_blank" id="addProductButton">Add Product</a>
-          <a href="./home.html" target="_blank">Home</a>
-          <a href="./Category.html" target="_blank" id="HomeCategory">AddCategory</a>
-          <a href="SeeAllOrders.html" target="_blank" id="AllOrderPage">All Oorders</a>
+          <a href="./Product.html" id="addProductButton">Add Product</a>
+          <a href="./home.html">Home</a>
+          <a href="./Category.html" id="HomeCategory">AddCategory</a>
+          <a href="SeeAllOrders.html" id="AllOrderPage">All Oorders</a>
           <a href="#">About Us</a>
         </nav>
       </div>
