--- a/prev.html
+++ b/prev.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="./css/homestyle.css">
     <link rel="stylesheet" href="css/footer.css">
     <link href='https://fonts.googleapis.com/css?family=Cairo' rel='stylesheet'>
-    <!-- شغل نادر حسبي الله  -->
-    <title> HEADER | E-COMMERCE WEBSITE </title>
+    <title> Nader Shop | Previous Orders </title>
     <!-- favicon -->
     <link rel="icon"
         href="https://yt3.ggpht.com/a/AGF-l78km1YyNXmF0r3-0CycCA0HLA_i6zYn_8NZEg=s900-c-k-c0xffffffff-no-rj-mo"
