--- a/productdetails.html
+++ b/productdetails.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nader Shop | Product Details</title>
     <!-- header link -->
     <!-- favicon -->
     <link rel="icon"
@@ -40,7 +40,7 @@
                     <a href="./Cart.html" target="_blank"> <i class="fa fa-cart-arrow-down"
                             aria-hidden="true"></i></i></a>
 
-                    <a href="../Validation Login and Sign-In/Login/Login.html" target="_blank">
+                    <a href="../Validation Login and Sign-In/Login/Login.html">
                         <button id="logInButton">Log In</button>
                     </a>
                     <button id="logOutButton">Logout</button>
