--- a/wishList.html
+++ b/wishList.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/cart.css">
     <link rel="stylesheet" href="css/homestyle.css">
     <link href='https://fonts.googleapis.com/css?family=Cairo' rel='stylesheet'>
-    <title> HEADER | E-COMMERCE WEBSITE </title>
+    <title> Nader Shop | Wishlist </title>
     <!-- favicon -->
     <link rel="icon"
         href="https://yt3.ggpht.com/a/AGF-l78km1YyNXmF0r3-0CycCA0HLA_i6zYn_8NZEg=s900-c-k-c0xffffffff-no-rj-mo"
@@ -21,7 +21,7 @@
         integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- footter link -->
-  <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/footer.css">
 
 </head>
 
