--- a/Cart.html
+++ b/Cart.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cart</title>
+    <title>Nader Shop | Cart</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/cart.css">
     <link rel="stylesheet" href="./css/homestyle.css">
     <link rel="stylesheet" href="css/footer.css">
     <link href='https://fonts.googleapis.com/css?family=Cairo' rel='stylesheet'>
-    <title> E-COMMERCE WEBSITE </title>
+    <title> Nader Shop | Cart Items </title>
     <!-- favicon -->
     <link rel="icon"
         href="https://yt3.ggpht.com/a/AGF-l78km1YyNXmF0r3-0CycCA0HLA_i6zYn_8NZEg=s900-c-k-c0xffffffff-no-rj-mo"
@@ -42,7 +42,7 @@
                     <a href="./Cart.html" target="_blank"> <i class="fa fa-cart-arrow-down"
                             aria-hidden="true"></i></i></a>
 
-                    <a href="../Validation Login and Sign-In/Login/Login.html" target="_blank">
+                    <a href="../Validation Login and Sign-In/Login/Login.html">
                         <button id="logInButton">Log In</button>
                     </a>
                     <button id="logOutButton">Logout</button>
@@ -51,10 +51,10 @@
             </div>
             <div>
                 <nav>
-                    <a href="./Product.html" target="_blank" id="addProductButton">Add Product</a>
-                    <a href="./home.html" target="_blank">Home</a>
-                    <a href="./Category.html" target="_blank" id="HomeCategory">AddCategory</a>
-                    <a href="SeeAllOrders.html" target="_blank" id="AllOrderPage">All Oorders</a>
+                    <a href="./Product.html" id="addProductButton">Add Product</a>
+                    <a href="./home.html">Home</a>
+                    <a href="./Category.html" id="HomeCategory">AddCategory</a>
+                    <a href="SeeAllOrders.html" id="AllOrderPage">All Oorders</a>
                     <a href="#">About Us</a>
                 </nav>
             </div>
