--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title> CONTENT | E-COMMERCE WEBSITE BY EDYODA </title>
+    <title> Nader Shop | Home </title>
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="icon"
         href="https://yt3.ggpht.com/a/AGF-l78km1YyNXmF0r3-0CycCA0HLA_i6zYn_8NZEg=s900-c-k-c0xffffffff-no-rj-mo"
@@ -55,10 +55,10 @@
             </div>
             <div>
                 <nav>
-                    <a href="./Product.html" target="_blank" id="addProductButton">Add Product</a>
-                    <a href="./home.html" target="_blank">Home</a>
-                    <a href="./Category.html" target="_blank" id="HomeCategory">AddCategory</a>
-                    <a href="SeeAllOrders.html" target="_blank" id="AllOrderPage">All Oorders</a>
+                    <a href="./Product.html" id="addProductButton">Add Product</a>
+                    <a href="./home.html">Home</a>
+                    <a href="./Category.html" id="HomeCategory">AddCategory</a>
+                    <a href="SeeAllOrders.html" id="AllOrderPage">All Oorders</a>
                     <a href="#">About Us</a>
                 </nav>
             </div>
