--- a/thanks.html
+++ b/thanks.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thank You Page</title>
+    <title>Coming Soon</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
@@ -30,9 +30,8 @@
 <body>
     <!-- Header Section -->
     <header class="bg-dark text-white text-center p-4">
-        Thank You for Buying Our Products
     </header>
-
+    <h1 class="bg-dark text-white text-center p-4"> Thank You for Buying Our Products</h1>
     <!-- Content Section -->
     <section id="content" class="container mt-5">
         <div class="row">
@@ -49,7 +48,7 @@
                 <img src="./images/WhatsApp Image 2023-12-17 at 01.45.41_893c688f.jpg" alt="Buying" class="img-fluid">
             </div>
         </div>
-       
+
     </section>
 
     <!-- Bootstrap & jQuery JS -->
