--- a/Validation Login and Sign-In/Register/Register.html
+++ b/Validation Login and Sign-In/Register/Register.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="title">Registration</div>
+      <div class="title"><b style="font-size: 30px;">Nader</b>shop</div>
       <div class="content">
         <form id="registrationForm">
           <div class="user-details">
