--- a/Category.html
+++ b/Category.html
@@ -20,6 +20,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- footter link -->
   <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/products.css">
 </head>
 
 <body>
@@ -60,7 +61,7 @@
   </header>
   <!-- header end -->
 
-  <div class="w-75 mx-auto my-4">
+  <div class="w-75 mx-auto my-4" id="fform">
     <label for="CategoryName">Category Name :</label>
     <input type="text" class="form-control my-2" id="CategoryName" />
     <label for="CategoryDesc">Category Desc :</label>
