--- a/Product.html
+++ b/Product.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/all.min.css" />
   <!-- header link -->
+  <title>Nader Shop | Add Product</title>
   <!-- favicon -->
   <link rel="icon"
     href="https://yt3.ggpht.com/a/AGF-l78km1YyNXmF0r3-0CycCA0HLA_i6zYn_8NZEg=s900-c-k-c0xffffffff-no-rj-mo"
