--- a/productdetails.html
+++ b/productdetails.html
@@ -56,7 +56,14 @@
                     <a href="#">About Us</a>
                 </nav>
             </div>
+            <div id="myModal" class="modal">
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <p>Please log in or provide an <a href="./Validation Login and Sign-In/Login/Login.html"
+                            target="_blank">email address</a>.</p>
 
+                </div>
+            </div>
         </section>
     </header>
     <!-- header end -->
