--- a/Cart.html
+++ b/Cart.html
@@ -92,7 +92,7 @@
     <!-- end of empty cart section -->
     <!-- next section is appare when user want to confirm order -->
     <section id="checkoutPage">
-        <form method="get" action="checkout.html">
+        <form method="get" action="thanks.html">
             <div class="checkoutContainer">
                 <h2>BILLING ADDRESS</h2>
                 <br>
