--- a/productdetails.html
+++ b/productdetails.html
@@ -49,10 +49,10 @@
             </div>
             <div>
                 <nav>
-                    <a href="./Product.html" target="_blank" id="addProductButton">Add Product</a>
-                    <a href="./home.html" target="_blank">Home</a>
-                    <a href="./Category.html" target="_blank" id="HomeCategory">AddCategory</a>
-                    <a href="SeeAllOrders.html" target="_blank" id="AllOrderPage">All Oorders</a>
+                    <a href="./Product.html" id="addProductButton">Add Product</a>
+                    <a href="./home.html">Home</a>
+                    <a href="./Category.html" id="HomeCategory">AddCategory</a>
+                    <a href="SeeAllOrders.html" id="AllOrderPage">All Oorders</a>
                     <a href="#">About Us</a>
                 </nav>
             </div>
